# waylay-sdk-rules-types/src/waylay/services/rules/queries/tasks_api.py
@@ -8,7 +8,7 @@ Generated by OpenAPI Generator (https://openapi-generator.tech)
 Do not edit the class manually.
 """
 
-from __future__ import annotations  # for Python 3.7–3.9
+from __future__ import annotations
 
 from typing import Any, List
 
@@ -22,7 +22,6 @@ from pydantic import (
 from typing_extensions import (
     Annotated,  # >=3.11
 )
-
 from waylay.sdk.api._models import BaseModel as WaylayBaseModel
 
 from ..models.list_tasks_format_parameter import ListTasksFormatParameter
@@ -63,11 +62,17 @@ class CreateQuery(WaylayBaseModel):
 
 
 def _delete_query_alias_for(field_name: str) -> str:
+    if field_name == "force_stop":
+        return "forceStop"
     return field_name
 
 
 class DeleteQuery(WaylayBaseModel):
     """Model for `delete` query parameters."""
+
+    force_stop: Annotated[
+        StrictBool | None, Field(description="Force task stop before deletion")
+    ] = None
 
     model_config = ConfigDict(
         protected_namespaces=(),
@@ -148,6 +153,8 @@ def _list_query_alias_for(field_name: str) -> str:
         return "template"
     if field_name == "filter":
         return "filter"
+    if field_name == "resource_metadata_expression":
+        return "resourceMetadataExpression"
     if field_name == "tags_key":
         return "tags.key"
     if field_name == "tags":
@@ -187,6 +194,12 @@ class ListQuery(WaylayBaseModel):
     template: StrictStr | None = None
     filter: Annotated[
         StrictStr | None, Field(description="fuzzy search on multiple properties")
+    ] = None
+    resource_metadata_expression: Annotated[
+        StrictStr | None,
+        Field(
+            description="return tasks that has linked resource from a list returned by resource metadata query."
+        ),
     ] = None
     tags_key: Annotated[
         Any | None,
