# waylay-sdk-rules-types/src/waylay/services/rules/queries/template_runs_api.py
@@ -8,7 +8,7 @@ Generated by OpenAPI Generator (https://openapi-generator.tech)
 Do not edit the class manually.
 """
 
-from __future__ import annotations  # for Python 3.7–3.9
+from __future__ import annotations
 
 from typing import List
 
@@ -20,10 +20,67 @@ from pydantic import (
 from typing_extensions import (
     Annotated,  # >=3.11
 )
-
 from waylay.sdk.api._models import BaseModel as WaylayBaseModel
 
 from ..models.run_template_log_level_parameter import RunTemplateLogLevelParameter
+
+
+def _debug_graph_query_alias_for(field_name: str) -> str:
+    if field_name == "log_level":
+        return "logLevel"
+    if field_name == "node_to_debug":
+        return "nodeToDebug"
+    return field_name
+
+
+class DebugGraphQuery(WaylayBaseModel):
+    """Model for `debug_graph` query parameters."""
+
+    node_to_debug: Annotated[
+        StrictStr, Field(description="node to debug inside template or graph")
+    ]
+    log_level: Annotated[
+        RunTemplateLogLevelParameter | None,
+        Field(
+            description="sets the log level for filtering out logs to requested log level or higher from the template run output. Value `NONE` will disable all logs. If not specified all logs will be returned."
+        ),
+    ] = None
+
+    model_config = ConfigDict(
+        protected_namespaces=(),
+        extra="allow",
+        alias_generator=_debug_graph_query_alias_for,
+        populate_by_name=True,
+    )
+
+
+def _debug_query_alias_for(field_name: str) -> str:
+    if field_name == "log_level":
+        return "logLevel"
+    if field_name == "node_to_debug":
+        return "nodeToDebug"
+    return field_name
+
+
+class DebugQuery(WaylayBaseModel):
+    """Model for `debug` query parameters."""
+
+    node_to_debug: Annotated[
+        StrictStr, Field(description="node to debug inside template or graph")
+    ]
+    log_level: Annotated[
+        RunTemplateLogLevelParameter | None,
+        Field(
+            description="sets the log level for filtering out logs to requested log level or higher from the template run output. Value `NONE` will disable all logs. If not specified all logs will be returned."
+        ),
+    ] = None
+
+    model_config = ConfigDict(
+        protected_namespaces=(),
+        extra="allow",
+        alias_generator=_debug_query_alias_for,
+        populate_by_name=True,
+    )
 
 
 def _run_graph_query_alias_for(field_name: str) -> str:
