# waylay-sdk-rules-types/src/waylay/services/rules/queries/templates_api.py
@@ -8,23 +8,44 @@ Generated by OpenAPI Generator (https://openapi-generator.tech)
 Do not edit the class manually.
 """
 
-from __future__ import annotations  # for Python 3.7–3.9
+from __future__ import annotations
 
 from typing import List
 
 from pydantic import (
     ConfigDict,
     Field,
+    StrictBool,
     StrictInt,
     StrictStr,
 )
 from typing_extensions import (
     Annotated,  # >=3.11
 )
-
 from waylay.sdk.api._models import BaseModel as WaylayBaseModel
 
 from ..models.list_tasks_format_parameter import ListTasksFormatParameter
+
+
+def _copy_query_alias_for(field_name: str) -> str:
+    if field_name == "new_name":
+        return "newName"
+    return field_name
+
+
+class CopyQuery(WaylayBaseModel):
+    """Model for `copy` query parameters."""
+
+    new_name: Annotated[
+        StrictStr, Field(description="New name for the copied template")
+    ]
+
+    model_config = ConfigDict(
+        protected_namespaces=(),
+        extra="allow",
+        alias_generator=_copy_query_alias_for,
+        populate_by_name=True,
+    )
 
 
 def _create_query_alias_for(field_name: str) -> str:
@@ -99,6 +120,8 @@ def _list_query_alias_for(field_name: str) -> str:
         return "hits"
     if field_name == "start_index":
         return "startIndex"
+    if field_name == "format":
+        return "format"
     if field_name == "filter":
         return "filter"
     if field_name == "ids":
@@ -111,6 +134,8 @@ def _list_query_alias_for(field_name: str) -> str:
         return "tags.X"
     if field_name == "tags":
         return "tags"
+    if field_name == "includegraph":
+        return "includegraph"
     return field_name
 
 
@@ -122,6 +147,10 @@ class ListQuery(WaylayBaseModel):
     ] = None
     start_index: Annotated[
         StrictInt | None, Field(description="(Paging) items to skip in the listing")
+    ] = None
+    format: Annotated[
+        ListTasksFormatParameter | None,
+        Field(description="Format of the graph definition"),
     ] = None
     filter: Annotated[
         StrictStr | None, Field(description="fuzzy search on multiple properties")
@@ -142,6 +171,12 @@ class ListQuery(WaylayBaseModel):
         List[StrictStr] | None,
         Field(
             description="Filter templates that have one of the tag keys in the array"
+        ),
+    ] = None
+    includegraph: Annotated[
+        StrictBool | None,
+        Field(
+            description="If `true`, the response will include the graph of the template."
         ),
     ] = None
 
